# style_transfer

./: .gitignore  README.md  __init__.py  __main__.py  losses.py  models.py  pyproject.toml  style_transfer.py  stylize.py  train.py  utils.py
StyleTransferUI/: App.js  app.json  package-lock.json  package.json
models/: __init__.py  models.py  transformation.py  vgg.py
