[build-system]
requires = ["setuptools ~= 58.0", "cython ~= 0.29.0"]

[project]
name = "style_transfer"
authors = [
    {name = "Kian Zohoury", email = "kzohoury@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "torch==1.12.1",
    "torchvision==0.13.1",
    "Pillow==7.1.2",
    "matplotlib==3.2.2",
    "tqdm==4.64.0"
]
